==========
- Mark the Repertoir Editor depecated, guide users to Masks
- Improvements
	* documentation for opening trainer (thanks to Dale Hards)
	* Some of the programs icons based on GNOME Stock Icons in case png-support is available
	* Some defaults of Scids empty config
	* Gamelist: show delete-flag to the very left of the list by default
	* Replace some buttons in help by proper img tags
	* Comment editor now opens by clicking the comment in game info area
	* Bring Best games / tree graph to front if they exist and the button is pressed again
	* Toggle autoplay mode was mapped to Ctrl-z instead of Ctrl-Z so it confliced with undo
	* HTML export
	    - Move nags rendered in same font as the move
	    - Diagram immediately follows the move (order of diagram and comments are swapped), which is a more common scenario
	    - Indentation of variations enhanced by putting them in indented div sections
	    - Current move hightlighting, board and diagram colors follow css style definition
	    - Cursor key navigation works in IE
	    - Cursor left key navigation works the same way backwards as right works its way forwards, i.e. skipping variations
	    - Dotted move numbers for black moves in a main line are also applied following a diagram and a variation.
	* Annotation
	    - Added engine thinking time to annotator string
	    - Stop engine at end of annotation
	    - UCI engine: Added notion of length of mating line to cp score (shorter is better)
- New features:
	* Correspondence Chess:
		- Allow observation of games on ICCF webchess
		- Add connector file support to configure game relay from the internet
		- Make dialogues etc. theme aware for Tk 8.5
		- Allow for postal games by the Mode "Postal" header. Those
		  games are not touched but show up in the cc window provided a
		  suitable PGN is present in the Inbox. (ICCF might generate this
		  in case of mixed events.)
		- Add two new headers: WhiteAddress / BlackAddress to hold